@@ -10,11 +10,31 @@ public class Gamblers {
 
     private List<Gambler> gamblers;
 
-    public Gamblers(List<String> names) {
-        validateDuplicateNames(names);
-        this.gamblers = names.stream()
-                .map(Gambler::new)
-                .collect(Collectors.toList());
+    public Gamblers(List<Gambler> gamblers) {
+        validateDuplicateNames(gamblers);
+        this.gamblers = gamblers;
+    }
+
+    public void validateDuplicateNames(List<Gambler> gamblers) {
+        List<String> names = gamblers
+                .stream()
+                .map(Gambler::getName)
+                .toList();
+
+        long distinctNameSize = names
+                .stream()
+                .distinct()
+                .count();
+
+        if(names.size() != distinctNameSize) {
+            throw new IllegalArgumentException("중복된 이름이 입력됩니다.");
+        }
+    }
+
+    public List<String> getNames() {
+        return gamblers.stream()
+                .map(Gambler::getName)
+                .toList();
     }
 
     public boolean containGambler(String name) {
@@ -56,13 +76,5 @@ public class Gamblers {
 
     public List<Gambler> getGamblers() {
         return List.copyOf(gamblers);
-    }
-
-    public void validateDuplicateNames(List<String> names) {
-        List<String> distinctNamesCount = names.stream().
-                distinct().collect(Collectors.toList());
-        if(distinctNamesCount.size() != names.size()) {
-            throw new IllegalArgumentException("중복된 이름이 입력됩니다.");
-        }
     }
 }
